--- a/signup.css
+++ b/signup.css
@@ -176,3 +176,79 @@ body{
 .register p a:hover{
     text-decoration: underline;
 }
+
+.right{
+    position: relative;
+    color: black;
+    height: 30vw;
+    width: 27vw;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 2vw 1vw;
+    border: 2px solid black;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background: transparent;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.right h3{
+    height: 5%;
+    font-size: 1vw;
+    font-weight: 400;
+    padding-left: 1vw;
+}
+
+.right .middle{
+    height: 95%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.middle .box{
+    height: 25%;
+    display: flex;
+    align-items: center;
+}
+
+.box i{
+    font-size: 2.5vw;
+    width: 20%;
+    text-align: center;
+}
+
+.box .fuck{
+    width: 80%;
+}
+
+.box h4{
+    font-size: 1.2vw;
+}
+
+.box p{
+    font-size: 0.9vw;
+    letter-spacing: 1px;
+}
+
+.coupon{
+    height: 25%;
+    width: 90%;
+    margin: auto;
+    background-color: aliceblue;
+    border-left: 8px solid #0023A1;
+    border-radius: 5px;
+    padding: 1vw;
+}
+
+.coupon h4{
+    font-size: 1.2vw;
+}
+
+.coupon p{
+    font-size: 1vw;
+    margin-top: 2px;
+}
